<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/large">

    <EditText
        android:id="@+id/editTextNoteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_name" />

    <EditText
        android:id="@+id/editTextNoteBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_body" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/large"
    android:layout_gravity="center"
    >

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"
        android:layout_margin="@dimen/medium"/>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cancel"
        android:layout_margin="@dimen/medium"/>
</LinearLayout>
</LinearLayout>