<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.NoteDetailActivity">

    <TextView
        android:id="@+id/textViewNoteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/large"
        android:text="@string/note_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewNoteBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/large"
        android:text="@string/note_body"
        android:textSize="@dimen/normal_font" />

    <Button
        android:id="@+id/buttonEditNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/large"
        android:text="@string/edit_note" />

    <Button
        android:id="@+id/buttonDeleteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/large"
        android:text="@string/delete_note" />
</LinearLayout>